--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "walmart-split",
+  "version": "2.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
