--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -6,9 +6,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-      REACT_APP_SPLITWISE_API_TOKEN: ${{ secrets.REACT_APP_SPLITWISE_API_TOKEN }}
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -20,8 +18,11 @@ jobs:
       run: npm install
     - name: Build React application
       run: npm run build
+      env:
+        REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+        REACT_APP_SPLITWISE_API_TOKEN: ${{ secrets.REACT_APP_SPLITWISE_API_TOKEN }}
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
-        branch: gh-pages-test
+        branch: gh-pages
         folder: build
