--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Build React application
       run: npm run build
       env:
-        REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-        REACT_APP_SPLITWISE_API_TOKEN: ${{ secrets.REACT_APP_SPLITWISE_API_TOKEN }}
+        REACT_APP_API_URL: https://0wfxd4jukj.execute-api.us-east-1.amazonaws.com/dev/
+        REACT_APP_SPLITWISE_API_TOKEN: nPXaaBSekp6w2MANilXJfkg4faqwH7I4W6Bdprhd
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
