--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "walmart-split",
+    "homepage": "https://yaswanthtondepu.github.io/walmsplit",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
@@ -20,6 +21,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -52,6 +55,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.2",
+        "gh-pages": "^6.1.1",
         "prettier": "^2.8.8",
         "tailwindcss": "^3.2.6"
     }
