--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@vercel/analytics": "^1.2.2",
         "axios": "^0.27.2",
         "bootstrap": "^5.2.1",
         "cheerio": "^1.0.0-rc.12",
